--- a/package.json
+++ b/package.json
@@ -3,18 +3,37 @@
   "version": "0.1.0",
   "homepage": "https://alexei-ruksha.github.io/react-order-scan",
   "private": true,
-  "dependencies": {
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-scripts": "2.1.5"
-  },
+  "description": "Building and Publishing a React Based Electron App From Scratch",
+  "author": "Alexei Ruksha",
+  "license": "MIT",
+  "main": "public/electron.js",
   "scripts": {
-    "start": "react-scripts start",
+    "dev:start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "concurrently \"cross-env BROWSER=none yarn react-scripts start\" \"wait-on http://localhost:3000 && electron .\"",
+    "pack": "electron-builder --dir",
+    "dist": "npm run build --x64 --macos --win --linux --c.extraMetadata.main=build/electron.js -p always",
+    "test": "react-scripts test"
+  },
+  "dependencies": {
+    "electron-is-dev": "^0.3.0",
+    "electron-publisher-s3": "^20.17.2",
+    "react": "^16.8.1",
+    "react-dev-utils": "^5.0.1",
+    "react-dom": "^16.8.1"
+  },
+  "devDependencies": {
+    "concurrently": "^3.6.0",
+    "cross-env": "^5.2.0",
+    "electron": "^2.0.3",
+    "electron-builder": "^20.18.0",
+    "gh-pages": "^2.0.1",
+    "react-scripts": "1.1.4",
+    "wait-on": "^3.2.0",
+    "electron-devtools-installer": "^2.2.4",
+    "version-bump-prompt": "^4.1.0"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -25,7 +44,56 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "gh-pages": "^2.0.1"
+  "build": {
+    "appId": "io.github.alexei-ruksha.react-order-scan",
+    "compression": "normal",
+    "productName": "Order Scan",
+    "directories": {
+      "buildResources": "build",
+      "output": "dist"
+    },
+    "mac": {
+      "icon": "assets/icon.icns",
+      "type": "distribution",
+      "target": [
+        "pkg",
+        "dmg",
+        "mas"
+      ],
+      "publish": {
+        "provider": "s3",
+        "bucket": "example-releases",
+        "path": "releases"
+      },
+      "category": "public.app-category.news"
+    },
+    "mas": {
+      "entitlements": "assets/entitlements.mas.plist",
+      "entitlementsInherit": "assets/entitlements.mas.inherit.plist",
+      "provisioningProfile": "assets/embedded.provisionprofile"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "assets/icon.ico",
+      "publish": {
+        "provider": "s3",
+        "bucket": "example-releases",
+        "path": "releases"
+      }
+    },
+    "linux": {
+      "icon": "assets/icon.png",
+      "target": [
+        "snap",
+        "AppImage"
+      ],
+      "description": "Example",
+      "category": "Network;Feed",
+      "publish": {
+        "provider": "s3",
+        "bucket": "example-releases",
+        "path": "releases"
+      }
+    }
   }
 }
